infra/k8s/application/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: medical-qa
spec:
  ingressClassName: nginx
  rules:
    - host: dongbin-medical-qa.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
