infra/k8s/application/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: medical-qa
spec:
  ingressClassName: nginx
  rules:
    - host: dongbin-medical-qa.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8002
          - path: /agent
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8001
